--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -119,18 +119,15 @@
     <string name="confirm_selection">Confirm selection</string>
 
     <plurals name="items">
-        <item quantity="one">%d item</item>
         <item quantity="other">%d items</item>
     </plurals>
 
     <!-- Are you sure you want to delete 5 items? -->
     <plurals name="delete_items">
-        <item quantity="one">%d item</item>
         <item quantity="other">%d items</item>
     </plurals>
 
     <plurals name="deleting_items">
-        <item quantity="one">Deleting %d item</item>
         <item quantity="other">Deleting %d items</item>
     </plurals>
 
@@ -246,7 +243,6 @@
     <string name="no">아니요</string>
 
     <plurals name="delete_warning">
-        <item quantity="one">WARNING: You are deleting %d folder</item>
         <item quantity="other">WARNING: You are deleting %d folders</item>
     </plurals>
 
@@ -280,78 +276,73 @@
     <string name="days_raw">일</string>
 
     <plurals name="seconds">
-        <item quantity="one">%d second</item>
         <item quantity="other">%d seconds</item>
     </plurals>
     <plurals name="minutes">
-        <item quantity="one">%d minute</item>
         <item quantity="other">%d minutes</item>
     </plurals>
     <plurals name="hours">
-        <item quantity="one">%d hour</item>
         <item quantity="other">%d hours</item>
     </plurals>
     <plurals name="days">
-        <item quantity="one">%d day</item>
         <item quantity="other">%d days</item>
     </plurals>
     <plurals name="weeks">
-        <item quantity="one">%d week</item>
         <item quantity="other">%d weeks</item>
     </plurals>
     <plurals name="months">
-        <item quantity="one">%d month</item>
         <item quantity="other">%d months</item>
     </plurals>
     <plurals name="years">
-        <item quantity="one">%d year</item>
         <item quantity="other">%d years</item>
     </plurals>
 
     <!-- For example: I will be there in 5 minutes -->
     <plurals name="in_seconds">
-        <item quantity="one">%d second</item>
         <item quantity="other">%d seconds</item>
     </plurals>
     <plurals name="in_minutes">
-        <item quantity="one">%d minute</item>
         <item quantity="other">%d minutes</item>
     </plurals>
     <plurals name="in_hours">
-        <item quantity="one">%d hour</item>
         <item quantity="other">%d hours</item>
     </plurals>
 
     <!-- For example: Event reminder: 3 minutes before -->
     <plurals name="seconds_before">
-        <item quantity="one">%d second before</item>
         <item quantity="other">%d seconds before</item>
     </plurals>
     <plurals name="minutes_before">
-        <item quantity="one">%d 분 전</item>
         <item quantity="other">%d 분 전</item>
     </plurals>
     <plurals name="hours_before">
-        <item quantity="one">%d 시간 전</item>
         <item quantity="other">%d 시간 전</item>
     </plurals>
     <plurals name="days_before">
-        <item quantity="one">%d 일 전</item>
         <item quantity="other">%d 일 전</item>
     </plurals>
 
     <!-- For example: Postpone reminder by 3 minutes -->
     <plurals name="by_seconds">
-        <item quantity="one">%d second</item>
         <item quantity="other">%d seconds</item>
     </plurals>
     <plurals name="by_minutes">
-        <item quantity="one">%d 분</item>
         <item quantity="other">%d 분</item>
     </plurals>
     <plurals name="by_hours">
-        <item quantity="one">%d 시</item>
         <item quantity="other">%d 시</item>
+    </plurals>
+    <plurals name="by_days">
+        <item quantity="other">%d days</item>
+    </plurals>
+    <plurals name="by_weeks">
+        <item quantity="other">%d weeks</item>
+    </plurals>
+    <plurals name="by_months">
+        <item quantity="other">%d months</item>
+    </plurals>
+    <plurals name="by_years">
+        <item quantity="other">%d years</item>
     </plurals>
 
     <!-- For example: Time remaining till the alarm goes off: 6 hours, 5 minutes -->
@@ -432,7 +423,6 @@
     <string name="hide_the_recycle_bin">Hide the Recycle Bin</string>
 
     <plurals name="moving_items_into_bin">
-        <item quantity="one">Moving %d item into the Recycle Bin</item>
         <item quantity="other">Moving %d items into the Recycle Bin</item>
     </plurals>
 
