--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -335,6 +335,26 @@
         <item quantity="few">%d часа</item>
         <item quantity="many">%d часов</item>
     </plurals>
+    <plurals name="in_days">
+        <item quantity="one">%d day</item>
+        <item quantity="few">%d days</item>
+        <item quantity="many">%d days</item>
+    </plurals>
+    <plurals name="in_weeks">
+        <item quantity="one">%d week</item>
+        <item quantity="few">%d weeks</item>
+        <item quantity="many">%d weeks</item>
+    </plurals>
+    <plurals name="in_months">
+        <item quantity="one">%d month</item>
+        <item quantity="few">%d months</item>
+        <item quantity="many">%d months</item>
+    </plurals>
+    <plurals name="in_years">
+        <item quantity="one">%d year</item>
+        <item quantity="few">%d years</item>
+        <item quantity="many">%d years</item>
+    </plurals>
 
     <!-- For example: Event reminder: 3 minutes before -->
     <plurals name="seconds_before">
@@ -357,6 +377,21 @@
         <item quantity="few">%d дня до события</item>
         <item quantity="many">%d дней до события</item>
     </plurals>
+    <plurals name="weeks_before">
+        <item quantity="one">%d week before</item>
+        <item quantity="few">%d weeks before</item>
+        <item quantity="many">%d weeks before</item>
+    </plurals>
+    <plurals name="months_before">
+        <item quantity="one">%d month before</item>
+        <item quantity="few">%d months before</item>
+        <item quantity="many">%d months before</item>
+    </plurals>
+    <plurals name="years_before">
+        <item quantity="one">%d year before</item>
+        <item quantity="few">%d years before</item>
+        <item quantity="many">%d years before</item>
+    </plurals>
 
     <!-- For example: Postpone reminder by 3 minutes -->
     <plurals name="by_seconds">
@@ -377,22 +412,22 @@
     <plurals name="by_days">
         <item quantity="one">%d day</item>
         <item quantity="few">%d days</item>
-        <item quantity="other">%d days</item>
+        <item quantity="many">%d days</item>
     </plurals>
     <plurals name="by_weeks">
         <item quantity="one">%d week</item>
         <item quantity="few">%d weeks</item>
-        <item quantity="other">%d weeks</item>
+        <item quantity="many">%d weeks</item>
     </plurals>
     <plurals name="by_months">
         <item quantity="one">%d month</item>
         <item quantity="few">%d months</item>
-        <item quantity="other">%d months</item>
+        <item quantity="many">%d months</item>
     </plurals>
     <plurals name="by_years">
         <item quantity="one">%d year</item>
         <item quantity="few">%d years</item>
-        <item quantity="other">%d years</item>
+        <item quantity="many">%d years</item>
     </plurals>
 
     <!-- For example: Time remaining till the alarm goes off: 6 hours, 5 minutes -->
