--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -322,20 +322,20 @@
         <item quantity="other">%d uren</item>
     </plurals>
     <plurals name="in_days">
-        <item quantity="one">%d day</item>
-        <item quantity="other">%d days</item>
+        <item quantity="one">%d dag</item>
+        <item quantity="other">%d dagen</item>
     </plurals>
     <plurals name="in_weeks">
         <item quantity="one">%d week</item>
-        <item quantity="other">%d weeks</item>
+        <item quantity="other">%d weken</item>
     </plurals>
     <plurals name="in_months">
-        <item quantity="one">%d month</item>
-        <item quantity="other">%d months</item>
+        <item quantity="one">%d maand</item>
+        <item quantity="other">%d maanden</item>
     </plurals>
     <plurals name="in_years">
-        <item quantity="one">%d year</item>
-        <item quantity="other">%d years</item>
+        <item quantity="one">%d jaar</item>
+        <item quantity="other">%d jaren</item>
     </plurals>
 
     <!-- For example: Event reminder: 3 minutes before -->
@@ -356,16 +356,16 @@
         <item quantity="other">%d dagen van tevoren</item>
     </plurals>
     <plurals name="weeks_before">
-        <item quantity="one">%d week before</item>
-        <item quantity="other">%d weeks before</item>
+        <item quantity="one">%d week van tevoren</item>
+        <item quantity="other">%d weken van tevoren</item>
     </plurals>
     <plurals name="months_before">
-        <item quantity="one">%d month before</item>
-        <item quantity="other">%d months before</item>
+        <item quantity="one">%d maand van tevoren</item>
+        <item quantity="other">%d maanden van tevoren</item>
     </plurals>
     <plurals name="years_before">
-        <item quantity="one">%d year before</item>
-        <item quantity="other">%d years before</item>
+        <item quantity="one">%d jaar van tevoren</item>
+        <item quantity="other">%d jaren van tevoren</item>
     </plurals>
 
     <!-- For example: Postpone reminder by 3 minutes -->
